Updated build scripts for the Replication tools container

--- a/admin/tools/docker/replication/container/dev/README
+++ b/admin/tools/docker/replication/container/dev/README
@@ -36,10 +36,10 @@ docker run \
 # NOTE: you may also check if your account (as mapped above) has required
 #       privileges to your home folder.
 
-source /stack/loadLSST.bash
+source /qserv/stack/loadLSST.bash
 setup -t qserv-dev qserv_distrib
 
 cd $SOURCE
 setup -r .
-scons -j4 install
+scons -j6 install
 
